[package]
name = "rustic"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Rustic: scratch-ready Rust runtime with rustls, ECDSA P-256 image trust, and concurrent Axum stack."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
mimalloc = { version = "0.1", default-features = false }

rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std"] }
webpki-roots = "0.26"

tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
    "time",
] }

axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }

hickory-resolver = { version = "0.25", features = ["tokio", "system-config"] }

chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"

# ECDSA P-256 (NIST ECC) over SHA-256 — image trust envelopes, WASM/DOM bundle digests, OCI runtime binding.
p256 = { version = "0.13", features = ["ecdsa", "pem", "std", "pkcs8"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"
thiserror = "2"

# KWT (KDL Web Token) — vendored from https://github.com/TheMapleseed/KWT with a chacha20poly1305 feature fix for 0.10.
kwt = { path = "crates/kwt" }

clap = { version = "4", features = ["derive"], optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }

[features]
default = []
rustic-tool = ["dep:clap", "dep:rand_core"]

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "rustic-tool"
path = "src/bin/rustic_tool.rs"
required-features = ["rustic-tool"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
