[package]
name = "kwt"
version = "0.1.0"
edition = "2021"
description = "KDL Web Token — reference implementation"

[dependencies]
# Cryptography — all from the audited RustCrypto project
# 0.10+ ships XChaCha20-Poly1305 under default/alloc; the old `xchacha20poly1305` feature flag was removed.
chacha20poly1305 = { version = "0.10", features = ["std"] }
aes-gcm          = "0.10"
hkdf             = "0.12"
sha2             = "0.10"

# Utilities
rand             = "0.8"
uuid             = { version = "1", features = ["v7"] }
zeroize          = { version = "1", features = ["derive"] }
base64ct         = { version = "1", features = ["alloc"] }
thiserror        = "1"

[dev-dependencies]
hex-literal = "0.4"
